<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_general">

        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="pref_default_port"
            android:title="@string/pref_default_port_title"
            android:summary="@string/pref_default_port_summary"
            android:defaultValue="8080"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="pref_timeout"
            android:title="@string/pref_timeout_title"
            android:summary="@string/pref_timeout_summary"
            android:entries="@array/timeout_entries"
            android:entryValues="@array/timeout_values"
            android:defaultValue="4000"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="pref_auto_refresh"
            android:title="@string/pref_auto_refresh_title"
            android:summary="@string/pref_auto_refresh_summary"
            android:entries="@array/auto_refresh_entries"
            android:entryValues="@array/auto_refresh_values"
            android:defaultValue="0"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_about">

        <Preference
            android:key="pref_version"
            android:title="@string/pref_version_title"
            android:selectable="false"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_github"
            android:title="@string/pref_github_title"
            android:summary="@string/pref_github_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_whats_new"
            android:title="@string/pref_whats_new_title"
            android:summary="@string/pref_whats_new_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
